[package]
name = "vrrp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet_base = "0.34.0"
derive_more = { version = "1.0.0-beta.6", features = ["add", "mul"] }

[dev-dependencies]
pretty_assertions = "1.4.0"